# acharya

./: .gitignore  API_URL_CONFIGURATION_GUIDE.md  BLOCKCHAIN_DEMO_GUIDE.md  HOSTEL_DASHBOARD_INTEGRATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  MIGRATION.md  hostel_fix_verification.py  package-lock.json  package.json  test_api.py  test_hostel_school_linking.py  test_mass_room_management.py
backend/: API_DOCUMENTATION.md  PARENT_AUTH_IMPLEMENTATION_SUMMARY.md  README.md  check_parent_profiles.py  db.sqlite3  debug_auth_simple.py  debug_parent_auth.py  gen_docs.py  pyproject.toml  requirements.txt  test_ai_extraction.py  test_complete_parent_flow.py  test_dashboard_direct.py  test_dashboard_simple.py  test_document_processing.py  test_parent_endpoints.py  test_parent_flow.py  test_parent_jwt_auth.py
backend/admissions/: admin.py  document_processor.py  email_service.py  models.py  serializers.py  test_views.py  urls.py  views.py
backend/admissions/migrations/: 0015_enhanced_parent_info.py  (+6 more)
backend/attendance/: admin.py
backend/config/: settings.py
backend/dashboard/: views.py
backend/docs/: PARENT_AUTHENTICATION.md
backend/exams/: admin.py
backend/fees/: models.py  serializers.py  views.py
backend/fixes/: admin_improvements.py  enhanced_permissions.py  migration_strategy.md  model_improvements.py  serializer_standardization.py
backend/hostel/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/: admin.py
backend/schools/: views.py
backend/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
(+53 files in other folders)
